# motion-matching

./: .clang-format-ignore  .gitignore  CMakeLists.txt  README.md
data/meshes/: capsule_textured.mtl  demo.mtl
data/mocap/mann/: D1_007_KAN01_001.bvh  D1_009_KAN01_001.bvh  D1_009_KAN01_002.bvh  D1_010_KAN01_002.bvh  D1_010_KAN01_003.bvh  D1_010_KAN01_004.bvh  D1_025_KAN01_001.bvh  D1_045_KAN01_001.bvh  D1_047z_KAN01_002.bvh  D1_047z_KAN01_003.bvh  D1_047z_KAN01_004.bvh  D1_047z_KAN01_005.bvh  D1_049_KAN01_001.bvh  D1_053_KAN01_001.bvh  D1_053_KAN01_002.bvh  D1_061z_KAN01_002.bvh  D1_071_KAN02_002.bvh  D1_ex01_KAN01_001.bvh  D1_ex03_KAN02_012.bvh  D1_ex03_KAN02_013.bvh  D1_ex03_KAN02_014.bvh  D1_ex04_KAN02_002.bvh  D1_ex04_KAN02_003.bvh  D1_ex04_KAN02_004.bvh  D1_ex06_KAN02_001.bvh  LICENSE
data/robot/bob/: bob.rbs
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/stb_image/: CMakeLists.txt
ext/stl_reader/: CMakeLists.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/mocapApp/: CMakeLists.txt  app.h  main.cpp
src/libs/: CMakeLists.txt
src/libs/gui/: CMakeLists.txt
src/libs/gui/imgui_widgets/: ImGuizmo.cpp  imGuIZMOquat.cpp  implot.cpp  implot_items.cpp
src/libs/gui/imgui_widgets/include/imgui_widgets/: imGuIZMOquat.h  imfilebrowser.h  imgui_add.h  vGizmo.h  vGizmoMath.h  vgConfig.h  vgMath.h
src/libs/gui/include/crl-basic/gui/: application.h  camera.h  glUtils.h  guiMath.h  inputstate.h  light.h  mesh.h  model.h  plots.h  renderer.h  shader.h  shadow_casting_light.h  shadow_map_fbo.h
src/libs/gui/shaders/: basic_lighting.frag  basic_lighting.vert  basic_shadow_lighting.frag  compute_shading.frag  render_shadow.frag  render_shadow.vert
src/libs/gui/src/: application.cpp  inputstate.cpp  mesh.cpp  model.cpp  renderer.cpp  shadow_map_fbo.cpp
src/libs/mocap/: CMakeLists.txt  LICENSE
src/libs/mocap/include/mocap/: MocapClip.h  MocapClipUtils.h  MocapMarker.h  MocapMarkerState.h  MocapMarkers.h  MocapModel.h  MocapRenderer.h  MocapSkeleton.h  MocapSkeletonState.h  MocapUtils.h  MotionInterpolator.h  PlotUtils.h  TimelineUtils.h
src/libs/mocap/include/mocap/bvh/: Bvh.h  BvhJoint.h  BvhParser.h
src/libs/mocap/include/mocap/c3d/: LICENSE  c3dfile.h  c3dtypes.h  c3dutils.h
src/libs/mocap/src/: Bvh.cpp  BvhJoint.cpp  BvhParser.cpp  MocapMarkersState.cpp  MocapRenderer.cpp  MocapSkeleton.cpp  MocapSkeletonState.cpp  MocapUtils.cpp  c3dfile.cpp  c3dutils.cpp
src/libs/utils/: CMakeLists.txt
src/libs/utils/include/crl-basic/utils/: geoms.h  json_helpers.h  logger.h  mathDefs.h  mathUtils.h  timer.h  trajectory.h  utils.h
src/libs/utils/src/: logger.cpp  utils.cpp
src/libs/utils/src/test/: trajectory.cpp
